--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,11 +1,12 @@
 {
   "dependencies": {
-    "com.unity.cinemachine": "2.3.4",
+    "com.unity.cinemachine": "2.5.0",
     "com.unity.entities": "0.6.0-preview.24",
-    "com.unity.ide.vscode": "1.1.4",
-    "com.unity.render-pipelines.universal": "7.1.8",
+    "com.unity.ide.visualstudio": "2.0.2",
+    "com.unity.ide.vscode": "1.2.1",
+    "com.unity.render-pipelines.universal": "8.2.0",
     "com.unity.rendering.hybrid": "0.3.4-preview.24",
-    "com.unity.textmeshpro": "2.0.1",
+    "com.unity.textmeshpro": "3.0.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
